<resources>
<!--    main activity-->
    <string name="app_name">TML APP</string>
    <string name="Login_hint">Enter Login ID</string>
    <string name="password_hint">Enter Password</string>
    <string name="Login_Button">Log in</string>
    <string name="LoginAsadmin_button">Login as Admin</string>
    <string name="CreateNewUser_button">Create New User</string>
    <string name="BTSetting_button">BT Setting</string>
<!--    admin login page-->
    <string name="AdminLogInPage_text">Admin Login Page</string>
    <string name="User_1_button">User 1</string>
    <string name="User_2_button">User 2</string>
    <string name="User_3_button">User 3</string>
    <string name="Delete_User_button">Delete User</string>
    <string name="Add_User_button">Add User</string>
<!--    bluetooth activity-->
    <string name="Bonded_Device_text">Bonded Device</string>
    <string name="Available_Device_text">Available Device</string>
    <string name="BT_ON_button">BT ON</string>
    <string name="show_button">show</string>
    <string name="search_button">search</string>
    <string name="BT_Off_button">BT OFF</string>
<!--create new user-->
    <string name="CreateNewUserText">Create New User</string>
    <string name="enteryourname_hint">Enter Your Name</string>
    <string name="enteryourDOB_hint">Enter Your DOB</string>
    <string name="enteryourpassword_hint">Enter Your Password</string>
    <string name="confirmyourpassword_hint">Confirm Your Password</string>
    <string name="Save_button">Save</string>
    <string name="Back_button">Back</string>
    <string name="View_button">View</string>



</resources>