<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Bluetooth_activity">

    <Button
        android:id="@+id/btonbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/BT_ON_button"
        ></Button>

    <Button
        android:id="@+id/showbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btonbutton"
        android:text="@string/show_button"></Button>

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/showbutton"
        android:text="@string/search_button"></Button>


    <Button
        android:id="@+id/btoffbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/searchbutton"
        android:text="@string/BT_Off_button"></Button>

    <TextView
        android:id="@+id/bondeddevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btonbutton"
        android:text="@string/Bonded_Device_text"
        android:textColor="@color/black"
        android:textSize="20dp"></TextView>

    <ListView
        android:id="@+id/btlist"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/bondeddevices">
    </ListView>

    <TextView
        android:id="@+id/bt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btlist"
        android:text="@string/Available_Device_text"
        android:textColor="@color/black"
        android:textSize="20dp"></TextView>

    <ListView
        android:id="@+id/btlistsearch"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/bt3">
    </ListView>
</RelativeLayout>